[package]
name = "wild_engine_sandbox"
version = "0.1.0"
authors = ["Dmajster <domen.rostohar98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.0"
specs = { version = "0.16.1", features = ["serde"]}
ron = "0.5.1"